# nats-running-app

./: .gitignore  README.md  package-lock.json  package.json
Docs/: Nat's Running App – MVP Design Document.md  agents.md
apps/api/: README.md  pyproject.toml
apps/api/app/: config.py  db.py  main.py  models.py  schemas.py
apps/api/app/auth/: dependencies.py  jwt.py
apps/api/app/domain/: adaptation.py  feasibility.py  planner.py  projection.py  zones.py
apps/api/app/routers/: auth.py  capability.py  goals.py  plans.py  workouts.py
apps/api/nra_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_feasibility.py  test_planner.py  test_projection.py  test_zones.py
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/app/: layout.tsx  page.tsx
apps/web/app/calendar/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/: Chat.tsx
apps/web/lib/: api.ts
ops/docker/: compose.yml
ops/migrations/: alembic.ini  env.py
ops/migrations/versions/: 0001_initial.py
scripts/: run_api.sh  run_web.sh
